fix scrollbar

--- a/main.css
+++ b/main.css
@@ -49,7 +49,7 @@ img{
 }
 
 .container{
-  min-height: 100%;
-  max-height: 100%;
+  min-height: 100vh;
+  max-height: 100vh;
   overflow-y: auto;
 }
